tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr49073.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr49073.c" (c, x86_64-unknown-linux-gnu)
global a : s32i[7] = [1, 2, 3, 4, 5, 6, 7] [external, default, align 16, dso_local]
global c : s32i = 0 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "d", align 4
    %2 = alloca s32i, "i", align 4
    %3 = alloca bool, "f", align 1
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 1 : s32i
    store %5, %1, align 4
    %6 = const 1 : s32i
    store %6, %2, align 4
    %7 = const 0 : s32i
    %8 = cast(int_to_bool) %7 : bool
    store %8, %3, align 1
    scope {
        do {
            scope {
                %19 = load %2 : s32i, align 4
                %20 = cast(integral) %19 : s64i
                %21 = get_global @a : s32i[7]*
                %22 = get_element %21[%20] : s32i*
                %23 = load %22 : s32i, align 4
                store %23, %1, align 4
                scope {
                    %29 = load %3 : bool, align 1
                    %30 = ternary %29 ? { : bool
                        %35 = load %1 : s32i, align 4
                        %36 = const 4 : s32i
                        %37 = cmp eq %35, %36 : bool
                        yield %37
                    } : {
                        %34 = const #false : bool
                        yield %34
                    }
                    if %30 {
                        %31 = get_global @c : s32i*
                        %32 = load %31 : s32i, align 4
                        %33 = inc %32 : s32i [nsw]
                        store %33, %31, align 4
                        break
                    }
                    yield
                }
                %24 = load %2 : s32i, align 4
                %25 = inc %24 : s32i [nsw]
                store %25, %2, align 4
                %26 = load %1 : s32i, align 4
                %27 = const 3 : s32i
                %28 = cmp eq %26, %27 : bool
                store %28, %3, align 1
                yield
            }
            yield
        } while {
            %16 = load %1 : s32i, align 4
            %17 = const 7 : s32i
            %18 = cmp lt %16, %17 : bool
            condition %18
        }
        yield
    }
    scope {
        %11 = get_global @c : s32i*
        %12 = load %11 : s32i, align 4
        %13 = const 1 : s32i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
