tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr49419.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr49419.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buf : rec_S[3] = [{1, 1, 2}] [cir_private, default, dso_local, constant]
global t : rec_S* = #cir.ptr<null> [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s32i, %arg2: s32i*, %arg3: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i*, %arg3: s32i):
        %31 = alloca s32i, "n", align 4
        %32 = alloca s32i, "f", align 4
        %33 = alloca s32i*, "s", align 8
        %34 = alloca s32i, "m", align 4
        %35 = alloca s32i, "__retval", align 4
        %36 = alloca s32i, "x", align 4
        %37 = alloca s32i, "i", align 4
        %38 = alloca s32i, "a", align 4
        store %arg0, %31
        store %arg1, %32
        store %arg2, %33
        store %arg3, %34
        scope {
            %101 = load %31 : s32i, align 4
            %102 = const -1 : s32i
            %103 = cmp eq %101, %102 : bool
            if %103 {
                %104 = const 0 : s32i
                store %104, %35
                %105 = load %35 : s32i
                return %105
            }
            yield
        }
        scope {
            %76 = load %31 : s32i, align 4
            store %76, %36, align 4
            %77 = const 0 : s32i
            store %77, %37, align 4
            for cond: {
                %87 = load %36 : s32i, align 4
                %88 = cast(integral) %87 : s64i
                %89 = get_global @t : rec_S**
                %90 = load %89 : rec_S*, align 8
                %91 = ptr_stride %90, %88 : rec_S*
                %92 = get_member %91[0] "w" : s32i*
                %93 = load %92 : s32i, align 4
                %94 = load %32 : s32i, align 4
                %95 = cmp eq %93, %94 : bool
                %96 = ternary %95 ? { : bool
                    %98 = load %37 : s32i, align 4
                    %99 = load %34 : s32i, align 4
                    %100 = cmp lt %98, %99 : bool
                    yield %100
                } : {
                    %97 = const false : bool
                    yield %97
                }
                condition %96
            } step: {
                %78 = load %37 : s32i, align 4
                %79 = inc %78 : s32i [nsw]
                store %79, %37, align 4
                yield
            } do {
                %80 = load %36 : s32i, align 4
                %81 = cast(integral) %80 : s64i
                %82 = get_global @t : rec_S**
                %83 = load %82 : rec_S*, align 8
                %84 = ptr_stride %83, %81 : rec_S*
                %85 = get_member %84[1] "x" : s32i*
                %86 = load %85 : s32i, align 4
                store %86, %36, align 4
                yield
            }
            yield
        }
        scope {
            %72 = load %37 : s32i, align 4
            %73 = load %34 : s32i, align 4
            %74 = cmp eq %72, %73 : bool
            if %74 {
                %75 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %39 = load %37 : s32i, align 4
        %40 = const 1 : s32i
        %41 = add %39, %40 : s32i [nsw]
        store %41, %38, align 4
        scope {
            %48 = load %31 : s32i, align 4
            store %48, %36, align 4
            for cond: {
                %69 = load %37 : s32i, align 4
                %70 = const 0 : s32i
                %71 = cmp gt %69, %70 : bool
                condition %71
            } step: {
                %49 = load %37 : s32i, align 4
                %50 = dec %49 : s32i [nsw]
                store %50, %37, align 4
                yield
            } do {
                scope {
                    %51 = load %36 : s32i, align 4
                    %52 = cast(integral) %51 : s64i
                    %53 = get_global @t : rec_S**
                    %54 = load %53 : rec_S*, align 8
                    %55 = ptr_stride %54, %52 : rec_S*
                    %56 = get_member %55[2] "y" : s32i*
                    %57 = load %56 : s32i, align 4
                    %58 = load %37 : s32i, align 4
                    %59 = cast(integral) %58 : s64i
                    %60 = load %33 : s32i*, align 8
                    %61 = ptr_stride %60, %59 : s32i*
                    store %57, %61, align 4
                    %62 = load %36 : s32i, align 4
                    %63 = cast(integral) %62 : s64i
                    %64 = get_global @t : rec_S**
                    %65 = load %64 : rec_S*, align 8
                    %66 = ptr_stride %65, %63 : rec_S*
                    %67 = get_member %66[1] "x" : s32i*
                    %68 = load %67 : s32i, align 4
                    store %68, %36, align 4
                    yield
                }
                yield
            }
            yield
        }
        %42 = load %36 : s32i, align 4
        %43 = const 0 : s64i
        %44 = load %33 : s32i*, align 8
        %45 = ptr_stride %44, %43 : s32i*
        store %42, %45, align 4
        %46 = load %38 : s32i, align 4
        store %46, %35
        %47 = load %35 : s32i
        return %47
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[3], "s", align 4
    %2 = alloca s32i, "i", align 4
    %3 = alloca rec_S[3], "buf", align 16
    %4 = const 0 : s32i
    store %4, %0
    %5 = get_global @__const.main.buf : rec_S[3]*
    copy %3, %5
    %6 = cast(array_to_ptrdecay) %3 : rec_S*
    %7 = get_global @t : rec_S**
    store %6, %7, align 8
    scope {
        %23 = const 0 : s32i
        %24 = const 1 : s32i
        %25 = cast(array_to_ptrdecay) %1 : s32i*
        %26 = const 3 : s32i
        %27 = call @foo(%23, %24, %25, %26) : s32i [all]
        %28 = const 2 : s32i
        %29 = cmp ne %27, %28 : bool
        if %29 {
            %30 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %10 = const 0 : s64i
        %11 = get_element %1[%10] : s32i*
        %12 = load %11 : s32i, align 4
        %13 = const 1 : s32i
        %14 = cmp ne %12, %13 : bool
        %15 = ternary %14 ? { : bool
            %22 = const true : bool
            yield %22
        } : {
            %17 = const 1 : s64i
            %18 = get_element %1[%17] : s32i*
            %19 = load %18 : s32i, align 4
            %20 = const 2 : s32i
            %21 = cmp ne %19, %20 : bool
            yield %21
        }
        if %15 {
            %16 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
